# mg

./: .gitignore  .mg  .travis.yml  AUTHORS  ChangeLog.md  Dockerfile  Makefile  Makefile.am  NOTES.md  README.md  UNLICENSE  autoexec.c  basic.c  bell.c  buffer.c  chrdef.h  cinfo.c  cmode.c  configure.ac  create_benchmark.py  cscope.c  def.h  dir.c  dired.c  display.c  echo.c  extend.c  file.c  fileio.c  funmap.c  funmap.h  grep.c  help.c  kbd.c  kbd.h  key.h  keymap.c  line.c  macro.c  macro.h  (+23 more)
.github/workflows/: build.yml  container.yml  coverity.yml  release.yml
CVS/: Entries  Root
debian/: .gitignore  changelog  control  copyright  docs  gbp.conf  menu  mg.examples  mg2a.examples  postinst  prerm  rules  watch
debian/patches/: 0001-Use-hardening-CPPFLAGS.patch  series
doc/: .gitignore  Makefile.am  mg.1  mg.doc  mg.tex  tutorial.md
lib/: .gitignore  fparseln.c  futimens.c  login_tty.c  openpty.c  recallocarray.c
src/: .gitignore  Makefile.am  ansi.c  ansi.h  autoexec.c  basic.c  bell.c  buffer.c  chrdef.h  cinfo.c  cmode.c  cscope.c  def.h  dir.c  dired.c  display.c  echo.c  extend.c  extensions.c  file.c  fileio.c  funmap.c  grep.c  help.c  interpreter.c  kbd.c  kbd.h  key.h  keymap.c  line.c  log.c  log.h  lua.c  macro.c  main.c  match.c  mdmode.c  modes.c  paragraph.c  pathnames.h  (+19 more)
